lender/tests/fail/once_covariant.stderr
error[E0277]: the trait bound `Invariant: lender::CovariantLending` is not satisfied
  --> tests/fail/once_covariant.rs:20:28
   |
20 |     let _ = lender::once::<Invariant>(v);
   |                            ^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `lender::CovariantLending` is not implemented for `Invariant`
  --> tests/fail/once_covariant.rs:7:1
   |
 7 | struct Invariant;
   | ^^^^^^^^^^^^^^^^
note: required by a bound in `lender::once`
  --> src/sources/once.rs
   |
   | pub fn once<'a, L: ?Sized + CovariantLending>(value: Lend<'a, L>) -> Once<'a, L> {
   |                             ^^^^^^^^^^^^^^^^ required by this bound in `once`

error[E0277]: the trait bound `Invariant: lender::CovariantLending` is not satisfied
  --> tests/fail/once_covariant.rs:20:13
   |
20 |     let _ = lender::once::<Invariant>(v);
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `lender::CovariantLending` is not implemented for `Invariant`
  --> tests/fail/once_covariant.rs:7:1
   |
 7 | struct Invariant;
   | ^^^^^^^^^^^^^^^^
note: required by a bound in `lender::Once`
  --> src/sources/once.rs
   |
   | pub struct Once<'a, L>
   |            ---- required by a bound in this struct
   | where
   |     L: ?Sized + CovariantLending,
   |                 ^^^^^^^^^^^^^^^^ required by this bound in `Once`

error[E0277]: the trait bound `FallibleInvariant: lender::CovariantFallibleLending` is not satisfied
  --> tests/fail/once_covariant.rs:24:37
   |
24 |     let _ = lender::fallible_once::<FallibleInvariant, std::io::Error>(v);
   |                                     ^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `lender::CovariantFallibleLending` is not implemented for `FallibleInvariant`
  --> tests/fail/once_covariant.rs:13:1
   |
13 | struct FallibleInvariant;
   | ^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `fallible_once`
  --> src/fallible_sources/once.rs
   |
   | pub fn once<'a, L: ?Sized + CovariantFallibleLending, E>(
   |                             ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `once`

error[E0277]: the trait bound `FallibleInvariant: lender::CovariantFallibleLending` is not satisfied
  --> tests/fail/once_covariant.rs:24:13
   |
24 |     let _ = lender::fallible_once::<FallibleInvariant, std::io::Error>(v);
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `lender::CovariantFallibleLending` is not implemented for `FallibleInvariant`
  --> tests/fail/once_covariant.rs:13:1
   |
13 | struct FallibleInvariant;
   | ^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `FallibleOnce`
  --> src/fallible_sources/once.rs
   |
   | pub struct Once<'a, L, E>
   |            ---- required by a bound in this struct
   | where
   |     L: ?Sized + CovariantFallibleLending,
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `FallibleOnce`

error[E0277]: the trait bound `FallibleInvariant: lender::CovariantFallibleLending` is not satisfied
  --> tests/fail/once_covariant.rs:28:41
   |
28 |     let _ = lender::fallible_once_err::<FallibleInvariant, _>(std::io::Error::other("test"));
   |                                         ^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `lender::CovariantFallibleLending` is not implemented for `FallibleInvariant`
  --> tests/fail/once_covariant.rs:13:1
   |
13 | struct FallibleInvariant;
   | ^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `fallible_once_err`
  --> src/fallible_sources/once.rs
   |
   | pub fn once_err<L: ?Sized + CovariantFallibleLending, E>(error: E) -> OnceErr<L, E> {
   |                             ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `once_err`

error[E0277]: the trait bound `FallibleInvariant: lender::CovariantFallibleLending` is not satisfied
  --> tests/fail/once_covariant.rs:28:13
   |
28 |     let _ = lender::fallible_once_err::<FallibleInvariant, _>(std::io::Error::other("test"));
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `lender::CovariantFallibleLending` is not implemented for `FallibleInvariant`
  --> tests/fail/once_covariant.rs:13:1
   |
13 | struct FallibleInvariant;
   | ^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `FallibleOnceErr`
  --> src/fallible_sources/once.rs
   |
   | pub struct OnceErr<L, E>
   |            ------- required by a bound in this struct
   | where
   |     L: ?Sized + CovariantFallibleLending,
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `FallibleOnceErr`
